cbits/clang_wrappers_ffi.h


static inline void wrap_getNullCursor(CXCursor * result) {
  *result = clang_getNullCursor();
}
static inline unsigned wrap_equalCursors(const CXCursor * C1, const CXCursor * C2) {
  return clang_equalCursors(*C1, *C2);
}
static inline int wrap_Cursor_isNull(const CXCursor * C) {
  return clang_Cursor_isNull(*C);
}
static inline unsigned wrap_hashCursor(const CXCursor * C) {
  return clang_hashCursor(*C);
}
static inline enum CXCursorKind wrap_getCursorKind(const CXCursor * C) {
  return clang_getCursorKind(*C);
}
static inline void wrap_getCursorType(const CXCursor * C, CXType * result) {
  *result = clang_getCursorType(*C);
}
static inline void wrap_getTypeSpelling(const CXType * CT, CXString * result) {
  *result = clang_getTypeSpelling(*CT);
}
static inline void wrap_getTypedefDeclUnderlyingType(const CXCursor * C, CXType * result) {
  *result = clang_getTypedefDeclUnderlyingType(*C);
}
static inline void wrap_getEnumDeclIntegerType(const CXCursor * C, CXType * result) {
  *result = clang_getEnumDeclIntegerType(*C);
}
static inline long long wrap_getEnumConstantDeclValue(const CXCursor * C) {
  return clang_getEnumConstantDeclValue(*C);
}
static inline unsigned long long wrap_getEnumConstantDeclUnsignedValue(const CXCursor * C) {
  return clang_getEnumConstantDeclUnsignedValue(*C);
}
static inline unsigned wrap_Cursor_isBitField(const CXCursor * C) {
  return clang_Cursor_isBitField(*C);
}
static inline int wrap_getFieldDeclBitWidth(const CXCursor * C) {
  return clang_getFieldDeclBitWidth(*C);
}
static inline int wrap_Cursor_getNumArguments(const CXCursor * C) {
  return clang_Cursor_getNumArguments(*C);
}
static inline void wrap_Cursor_getArgument(const CXCursor * C, unsigned i, CXCursor * result) {
  *result = clang_Cursor_getArgument(*C, i);
}
static inline unsigned wrap_equalTypes(const CXType * A, const CXType * B) {
  return clang_equalTypes(*A, *B);
}
static inline void wrap_getCanonicalType(const CXType * T, CXType * result) {
  *result = clang_getCanonicalType(*T);
}
static inline unsigned wrap_isConstQualifiedType(const CXType * T) {
  return clang_isConstQualifiedType(*T);
}
static inline unsigned wrap_Cursor_isMacroFunctionLike(const CXCursor * C) {
  return clang_Cursor_isMacroFunctionLike(*C);
}
static inline unsigned wrap_Cursor_isMacroBuiltin(const CXCursor * C) {
  return clang_Cursor_isMacroBuiltin(*C);
}
static inline unsigned wrap_Cursor_isFunctionInlined(const CXCursor * C) {
  return clang_Cursor_isFunctionInlined(*C);
}
static inline unsigned wrap_isVolatileQualifiedType(const CXType * T) {
  return clang_isVolatileQualifiedType(*T);
}
static inline unsigned wrap_isRestrictQualifiedType(const CXType * T) {
  return clang_isRestrictQualifiedType(*T);
}
static inline unsigned wrap_getAddressSpace(const CXType * T) {
  return clang_getAddressSpace(*T);
}
static inline void wrap_getTypedefName(const CXType * CT, CXString * result) {
  *result = clang_getTypedefName(*CT);
}
static inline void wrap_getPointeeType(const CXType * T, CXType * result) {
  *result = clang_getPointeeType(*T);
}
static inline void wrap_getTypeDeclaration(const CXType * T, CXCursor * result) {
  *result = clang_getTypeDeclaration(*T);
}
static inline void wrap_getTypeKindSpelling(enum CXTypeKind K, CXString * result) {
  *result = clang_getTypeKindSpelling(K);
}
static inline void wrap_getResultType(const CXType * T, CXType * result) {
  *result = clang_getResultType(*T);
}
static inline int wrap_getNumArgTypes(const CXType * T) {
  return clang_getNumArgTypes(*T);
}
static inline void wrap_getArgType(const CXType * T, unsigned i, CXType * result) {
  *result = clang_getArgType(*T, i);
}
static inline void wrap_Type_getObjCObjectBaseType(const CXType * T, CXType * result) {
  *result = clang_Type_getObjCObjectBaseType(*T);
}
static inline unsigned wrap_Type_getNumObjCProtocolRefs(const CXType * T) {
  return clang_Type_getNumObjCProtocolRefs(*T);
}
static inline void wrap_Type_getObjCProtocolDecl(const CXType * T, unsigned i, CXCursor * result) {
  *result = clang_Type_getObjCProtocolDecl(*T, i);
}
static inline unsigned wrap_Type_getNumObjCTypeArgs(const CXType * T) {
  return clang_Type_getNumObjCTypeArgs(*T);
}
static inline void wrap_Type_getObjCTypeArg(const CXType * T, unsigned i, CXType * result) {
  *result = clang_Type_getObjCTypeArg(*T, i);
}
static inline unsigned wrap_isFunctionTypeVariadic(const CXType * T) {
  return clang_isFunctionTypeVariadic(*T);
}
static inline void wrap_getCursorResultType(const CXCursor * C, CXType * result) {
  *result = clang_getCursorResultType(*C);
}
static inline int wrap_getCursorExceptionSpecificationType(const CXCursor * C) {
  return clang_getCursorExceptionSpecificationType(*C);
}
static inline unsigned wrap_isPODType(const CXType * T) {
  return clang_isPODType(*T);
}
static inline void wrap_getElementType(const CXType * T, CXType * result) {
  *result = clang_getElementType(*T);
}
static inline long long wrap_getNumElements(const CXType * T) {
  return clang_getNumElements(*T);
}
static inline void wrap_getArrayElementType(const CXType * T, CXType * result) {
  *result = clang_getArrayElementType(*T);
}
static inline long long wrap_getArraySize(const CXType * T) {
  return clang_getArraySize(*T);
}
static inline void wrap_Type_getNamedType(const CXType * T, CXType * result) {
  *result = clang_Type_getNamedType(*T);
}
static inline unsigned wrap_Type_isTransparentTagTypedef(const CXType * T) {
  return clang_Type_isTransparentTagTypedef(*T);
}
static inline long long wrap_Type_getAlignOf(const CXType * T) {
  return clang_Type_getAlignOf(*T);
}
static inline long long wrap_Type_getSizeOf(const CXType * T) {
  return clang_Type_getSizeOf(*T);
}
static inline long long wrap_Type_getOffsetOf(const CXType * T, const char * S) {
  return clang_Type_getOffsetOf(*T, S);
}
static inline void wrap_Type_getModifiedType(const CXType * T, CXType * result) {
  *result = clang_Type_getModifiedType(*T);
}
static inline void wrap_Type_getValueType(const CXType * CT, CXType * result) {
  *result = clang_Type_getValueType(*CT);
}
static inline long long wrap_Cursor_getOffsetOfField(const CXCursor * C) {
  return clang_Cursor_getOffsetOfField(*C);
}
static inline unsigned wrap_Cursor_isAnonymous(const CXCursor * C) {
  return clang_Cursor_isAnonymous(*C);
}
static inline unsigned wrap_Cursor_isAnonymousRecordDecl(const CXCursor * C) {
  return clang_Cursor_isAnonymousRecordDecl(*C);
}
static inline enum CX_StorageClass wrap_Cursor_getStorageClass(const CXCursor * C) {
  return clang_Cursor_getStorageClass(*C);
}
static inline void wrap_getCursorSpelling(const CXCursor * C, CXString * result) {
  *result = clang_getCursorSpelling(*C);
}
static inline void wrap_Cursor_getSpellingNameRange(const CXCursor * C, unsigned pieceIndex, unsigned options, CXSourceRange * result) {
  *result = clang_Cursor_getSpellingNameRange(*C, pieceIndex, options);
}
static inline void wrap_getCursorDisplayName(const CXCursor * C, CXString * result) {
  *result = clang_getCursorDisplayName(*C);
}
static inline void wrap_getCursorReferenced(const CXCursor * C, CXCursor * result) {
  *result = clang_getCursorReferenced(*C);
}
static inline void wrap_getCursorDefinition(const CXCursor * C, CXCursor * result) {
  *result = clang_getCursorDefinition(*C);
}
static inline unsigned wrap_isCursorDefinition(const CXCursor * C) {
  return clang_isCursorDefinition(*C);
}
static inline void wrap_getCanonicalCursor(const CXCursor * C, CXCursor * result) {
  *result = clang_getCanonicalCursor(*C);
}
static inline void wrap_Cursor_getRawCommentText(const CXCursor * C, CXString * result) {
  *result = clang_Cursor_getRawCommentText(*C);
}
static inline void wrap_Cursor_getBriefCommentText(const CXCursor * C, CXString * result) {
  *result = clang_Cursor_getBriefCommentText(*C);
}
static inline CXEvalResult wrap_Cursor_Evaluate(const CXCursor * C) {
  return clang_Cursor_Evaluate(*C);
}