bootstrap/imports.h

CXCursor                clang_getTranslationUnitCursor (CXTranslationUnit TU);
unsigned                clang_isDeclaration (enum CXCursorKind CK);
enum CX_StorageClass        clang_Cursor_getStorageClass (CXCursor C);
CXEvalResultKind   clang_EvalResult_getKind (CXEvalResult E);
int                clang_EvalResult_getAsInt (CXEvalResult E);
long long          clang_EvalResult_getAsLongLong (CXEvalResult E);
unsigned           clang_EvalResult_isUnsignedInt (CXEvalResult E);
unsigned long long clang_EvalResult_getAsUnsigned (CXEvalResult E);
double             clang_EvalResult_getAsDouble (CXEvalResult E);
void               clang_EvalResult_dispose (CXEvalResult E);